syntax = "proto3";
import "Position.proto";
import "Ride.proto";
package grpc.protocols;

message ChargeRequest {
  int32 id = 1;
  int32 port = 2;
  Position position = 3;
  string ts = 4;
}

message ChargeResponse {
  string response = 1;
  int32 taxiInQueue = 2;
  int64 offset = 3;
}

message NotifyNewRideToServer {
  Ride ride = 1;
  int32 topic = 2;
}

message NewRideResponse {
  string message = 1;
}

service ServiceProtocol {
  rpc askForCharge(ChargeRequest) returns (ChargeResponse);
  rpc notifyNewRide(NotifyNewRideToServer) returns (NewRideResponse);
}